tests/idris2/reg005/expected
1/1: Building iftype (iftype.idr)
Error: While processing right hand side of isInListBad. Can't solve constraint between: if c then "Foo" else "Baz" and if c then "Foo" else "Bar".

iftype.idr:15:15--15:19
    |
 15 | isInListBad = Here
    |               ^^^^

